--- a/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
+++ b/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
@@ -1,1 +1,84 @@
-<p>wire-off-stock works!</p>
+
+<div class="row">
+  <div class="col-2">
+  </div>
+  <div class="col-8">
+      <div class="card">
+          <div  class="card-header text-center">
+            <h3>Wire Off Stock</h3>
+          </div>
+          <div class="card-body">
+            
+      
+              <div class="row">
+                  <div class="card">
+                      <div class="card-body">
+                          <form [formGroup]="productDetailForm">
+                              <div class="row form-group">
+                                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                    <label >Product Name:</label>
+                                    <input type="text" class="form-control" readonly="readonly" placeholder="product name" formControlName="productName">
+                                </div>
+                              </div>
+                              <div class="row form-group">
+                                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                    <label >Price:</label>
+                                    <input type="number" class="form-control" readonly="readonly" formControlName="price">
+                                </div>
+                              </div>
+                              <div class="row form-group">
+                                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                  <label >Category:</label>
+                                  <input type="text" class="form-control" readonly="readonly" formControlName="productTypeId">
+                                </div>
+                              </div>
+                              <div class="row form-group">
+                                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                  <label >Size:</label>
+                                  <input type="text" class="form-control" readonly="readonly" formControlName="productSizeId">
+                                </div>
+                              </div>
+                                <div class="row form-group">
+                                  <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                      <label >Quantity:</label>
+                                      <input type="number" class="form-control"  formControlName="productQuantity">
+                                  </div>
+                                </div>    
+                          </form>
+                      </div>
+                    </div>
+              </div>
+      
+              <div class="row mt-5">
+                  <div class="col-12">
+                      <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{stockId==0?'Save':'Wireoff'}}</button>
+                      <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/stock/detail'">Cancel</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+      
+  </div>
+  <div class="col-2">
+  </div>
+</div>
+
+<!-- Product Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Stock Wire Off confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Stock Wire Off Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="wireOffStockConfirm()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
