--- a/src/app/Admin/Team/add-team/add-team.component.html
+++ b/src/app/Admin/Team/add-team/add-team.component.html
@@ -1,1 +1,117 @@
-<p>add-team works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Add Team</h3>
+    </div>
+    <div class="card-body">
+      
+        <div class="row">
+            <div class="card">
+                <div  class="card-header">
+                  <h5>Team details</h5>
+                </div>
+                <div class="card-body">
+                  <form [formGroup]="addTeamForm">
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Team Name:</label>
+                            <input type="text" class="form-control" formControlName="teamName" placeholder="teamname">
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Description:</label>
+                            <textarea cols="10" rows="5" class="form-control" formControlName="teamDescription"></textarea>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Location:</label>
+                            <select class="form-control" formControlName="locationId">
+                                <option value="none">-- select location --</option>
+                                <option [value]="location.locationId" *ngFor="let location of locationData">{{location.locationArea+ ' '+location.locationProvince}}</option>
+                            </select>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Maximum Employees:</label>
+                            <input type="number" class="form-control" value="0" formControlName="maxEmployee">
+                        </div>
+                      </div>
+
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Start Time:</label>
+                            <input type="time" class="form-control" formControlName="startTime">
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >End Time</label>
+                            <input type="time" class="form-control" value="0" formControlName="endTime">
+                        </div>
+                      </div>
+                      <div class="row form-group mt-3">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                          <h5 >Team Working Days</h5>
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col">Day Number</th>
+                                <th scope="col">Day Name</th>
+                                <th  scope="col">Actions</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let teamDay of teamDays">
+                                <th scope="row">{{teamDay.dayId}}</th>
+                                <td scope="row">{{teamDay.dayName}}</td>
+                                <td scope="row"><button type="button" class="btn btn-outline-primary" (click)="removeDay(teamDay)">Remove</button></td>
+                              </tr>
+                              <tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Working Days:</label>
+                            <select class="form-control" formControlName="day" (change)="selectDay()">
+                                <option value="none">-- select Working Day --</option>
+                                <option [ngValue]="day" *ngFor="let day of daysData">{{day.dayName}}</option>
+                            </select>
+                        </div>
+                      </div>
+                  </form>
+                </div>
+              </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{teamId==0?'Save':'Update'}}</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/team/detail'" >Cancel</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+
+    <!-- Team Addition Confimation Model -->
+    <div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Team Addition confirmation</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Confirm Team Addition</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddTeamForm()">Yes</button>
+          </div>
+        </div>
+      </div>
+    </div>
